--- a/TaxApi/TaxTests/TaxTests.csproj
+++ b/TaxApi/TaxTests/TaxTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TaxLib\TaxLib.csproj" />
+    <ProjectReference Include="..\TaxRepo\TaxRepo.csproj" />
   </ItemGroup>
 
 </Project>
