--- a/TaxApi/TaxRepo/TaxRepo.csproj
+++ b/TaxApi/TaxRepo/TaxRepo.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
+  </ItemGroup>
+
 </Project>
